--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     },
     "bugs": {
         "url": "https://github.com/app-generator/boilerplate-code-flask-dashboard/issues",
-        "email": "support@appseed.us"
+        "email": "support@GrabVoice.us"
     },
-    "author": "AppSeed App Generator <support@appseed.us> (https://appseed.us)",
+    "author": "GrabVoice App Generator <support@GrabVoice.us> (https://GrabVoice.us)",
     "engines": {
         "node": ">=10.0.0"
     },
