--- a/env.sample
+++ b/env.sample
@@ -10,8 +10,8 @@ FLASK_ENV=development
 # If DB credentials (if NOT provided, or wrong values SQLite is used) 
 # DB_ENGINE=mysql
 # DB_HOST=localhost
-# DB_NAME=GrabVoice_db
-# DB_USERNAME=GrabVoice_db_usr
+# DB_NAME=Marita_db
+# DB_USERNAME=Marita_db_usr
 # DB_PASS=pass
 # DB_PORT=3306
 
