--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     },
     "bugs": {
         "url": "https://github.com/app-generator/boilerplate-code-flask-dashboard/issues",
-        "email": "support@grabvoice.com"
+        "email": "support@Marita.com"
     },
-    "author": "GrabVoice App Generator <support@grabvoice.com> (https://grabvoice.com)",
+    "author": "Marita App Generator <support@Marita.com> (https://Marita.com)",
     "engines": {
         "node": ">=10.0.0"
     },
